--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,8 @@
 
           <ion-img src="assets/logo01.png" class="menu-logo"></ion-img>
 
-          <ion-list-header class="ion-text-center">Fuinhas</ion-list-header>
-          <ion-note>Futucando onde não deve.</ion-note>
+          <ion-list-header class="ion-text-center">Academia MxM</ion-list-header>
+          <ion-note>Exercício físico também é alimento para o corpo e a alma.</ion-note>
 
           <ion-menu-toggle auto-hide="false">
             <ion-item routerDirection="root" routerLink="/register" lines="none" detail="false"
