--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -10,7 +10,19 @@
 
 <ion-content class="ion-padding-horizontal">
 
-  <h2>Artigos Recentes</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam voluptates aut cumque animi laborum? Tenetur, voluptatum. Voluptatibus, repellendus tempore? Obcaecati voluptatum fuga dicta tenetur blanditiis fugiat voluptatem consequatur molestias quisquam?</p>
+  
+  <h3>Conheça a Academia MxM</h3>
+  <p>A  Academia MXM é o resultado de um projeto em família, no segmento fitness. <br/>
+    Buscando melhorar no segmento de atividades físicas, <br/>
+     sendo orientado por um único pensamento: oferecer tudo o que você precisa para estar bem, <br/>
+     investindo em melhorias nos equipamentos e na estrutura física como um todo.<br/>
+     <br>
+    
+    A administração trouxe valores que colocam em evidência o bem-estar e a saúde de todos os usuários.<br/>
+     Para isso, uma equipe de profissionais capacitados e especializados se uniu para levar conforto<br/>
+      e comodidade aos alunos e demais freqüentadores do nosso espaço.<br/>
+    <br>
+    Ficamos localizados na Rua Lindalva, 256.
+    </p>
 
 </ion-content>
